@@ -1,39 +1,0 @@
-#
-# $Id$
-# $Source$
-#
-# Telnet interface to IBM RSA cards.
-# This is waiting for a protocol to be developed for power control via
-# the telnet "debug mode" (IBM says "no problem")
-#
-specification {
-	name 		"ibmasm"
-	type 		"TCP"
-	offstring 	"Off"
-	onstring  	"On"
-	plugcount 	1
-	timeout  	5
-
-	script login {
-		send "\IAC\DONT\TELOPT_NAWS\IAC\DONT\TELOPTTTYPE"
-		expect "Login ID:"
-		send "USERID\r\n"
-		send "PASSW0RD\r\n"
-		expect "Select" 
-		delay 1
-		send "\004"  			# ^D to enter "debug mode"
-		expect "==> " 
-	}
-	script logout {
-		send "\004"  			# ^D to log completely off
-	}
-	script status_all {
-	}
-	script on {
-	}
-	script off {
-	}
-	script cycle {
-	}
-	plug name "1"
-}
